<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="
          http://maven.apache.org/POM/4.0.0
          http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <!-- Project Object Model -->
  <!-- All POMs extend the Super POM unless explicitly set -->
  <!--<parent>*</parent>-->

  <groupId>ru.otus</groupId>
  <artifactId>otus-java</artifactId>
  <version>${revision}</version>

  <packaging>pom</packaging>

  <developers>
    <developer>
      <name>Sergey</name>
    </developer>
    <developer>
      <name>Vyacheslav Lapin</name>
    </developer>
    <developer>
      <name>Vadim Tisov</name>
    </developer>
    <developer>
      <name>Vitaly Kutsenko</name>
    </developer>
  </developers>

  <modules>
    <module>L01-maven</module>
    <module>L03_generics_collections</module>
    <module>L05-qa</module>
    <module>L06-gc</module>
    <module>L09-annotations</module>
    <module>L10-java8</module>
    <module>L11-solid</module>
    <module>L12-behavioralPatterns</module>
    <module>L13-structuralPatterns</module>
    <module>L14-CreationalPatterns</module>
    <module>L29-executors</module>
  </modules>

  <properties>

    <!-- region general -->
    <java.version>13</java.version>
    <revision>2019-09-SNAPSHOT</revision>
    <minimal.maven.version>3.6.1</minimal.maven.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <!--endregion-->

    <!--region BOM (Bill Of Material)-->
    <spring-boot.version>2.2.4.RELEASE</spring-boot.version>
    <!--endregion-->

    <!--region libs-->
    <lombok.version>1.18.10</lombok.version>
    <com.google.guava.version>28.2-jre</com.google.guava.version>
    <vavr.version>1.0.0-alpha-3</vavr.version>

    <checker.version>3.1.0</checker.version>
    <annotations.version>18.0.0</annotations.version>
    <jcip-annotations.version>1.0</jcip-annotations.version>
    <spotbugs.version>4.0.0-RC1</spotbugs.version>
    <error_prone_annotations.version>2.3.4</error_prone_annotations.version>
    <!--endregion-->

    <!--region plugins-->
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <maven.compiler.parameters>true</maven.compiler.parameters>
    <maven.compiler.forceJavacCompilerUse>true</maven.compiler.forceJavacCompilerUse>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>

    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>

    <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>

    <maven-assembly-plugin.version>3.2.0</maven-assembly-plugin.version>
    <maven-assembly-plugin.descriptorSuffix>jar-with-dependencies</maven-assembly-plugin.descriptorSuffix>

    <lombok-maven-plugin.version>1.18.10.0</lombok-maven-plugin.version>
    <lombok.verbose>true</lombok.verbose>
    <lombok.addOutputDirectory>false</lombok.addOutputDirectory>
    <lombok.sourceDirectory>${project.basedir}/src/main/java</lombok.sourceDirectory>
    <lombok.testSourceDirectory>${project.basedir}/src/test/java</lombok.testSourceDirectory>
    <!--endregion-->

    <my.variable>42</my.variable>
  </properties>

  <dependencyManagement>
    <dependencies>

      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${com.google.guava.version}</version>
        <exclusions>
          <exclusion>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>animal-sniffer</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
        <optional>true</optional>
      </dependency>
      <dependency>
        <groupId>io.vavr</groupId>
        <artifactId>vavr</artifactId>
        <version>${vavr.version}</version>
      </dependency>

      <!--region Common Annotations (CheckerFramework, JetBrains, SpotBugs, ErrorProne) -->
      <dependency>
        <groupId>org.checkerframework</groupId>
        <artifactId>checker</artifactId>
        <version>${checker.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.jetbrains</groupId>
        <artifactId>annotations</artifactId>
        <version>${annotations.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>net.jcip</groupId>
        <artifactId>jcip-annotations</artifactId>
        <version>${jcip-annotations.version}</version>
        <optional>true</optional>
      </dependency>
      <dependency>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-annotations</artifactId>
        <version>${spotbugs.version}</version>
        <optional>true</optional>
      </dependency>
      <dependency>
        <groupId>com.google.errorprone</groupId>
        <artifactId>error_prone_annotations</artifactId>
        <version>${error_prone_annotations.version}</version>
        <scope>provided</scope>
      </dependency>
      <!--endregion-->

    </dependencies>
  </dependencyManagement>

  <dependencies>

      <!--region Test dependencies - JUnit Jupiter, AssertJ, Hamcrest, Mockito -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-junit-jupiter</artifactId>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
      </dependency>
      <!--endregion-->

  </dependencies>

  <build>
    <finalName>ImTheBestApp</finalName>

    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
          <configuration>
            <compilerArgs>
              <arg>-parameters</arg>
              <arg>--enable-preview</arg>
              <!--<arg>-Xplugin:Manifold</arg>-->
              <!--<arg>-Xlint:preview</arg>-->
            </compilerArgs>
            <!--<annotationProcessorPaths>-->
            <!--  <processorPath>-->
            <!--    <groupId>systems.manifold</groupId>-->
            <!--    <artifactId>manifold-all</artifactId>-->
            <!--    <version>${manifold-version}</version>-->
            <!--  </processorPath>-->
            <!--  <processorPath>-->
            <!--    <groupId>org.projectlombok</groupId>-->
            <!--    <artifactId>lombok</artifactId>-->
            <!--    <version>${lombok.version}</version>-->
            <!--  </processorPath>-->
            <!--</annotationProcessorPaths>-->
            <!--<annotationProcessors>-->
            <!--  <annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</annotationProcessor>-->
            <!--  <annotationProcessor>lombok.launch.AnnotationProcessorHider$ClaimingProcessor</annotationProcessor>-->
            <!--</annotationProcessors>-->
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
          <configuration>
            <argLine>--enable-preview</argLine>
          </configuration>
        </plugin>

        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>${maven-assembly-plugin.version}</version>
          <configuration><!-- http://maven.apache.org/plugins/maven-assembly-plugin/usage.html -->
            <descriptorRefs>
              <descriptorRef>${maven-assembly-plugin.descriptorSuffix}</descriptorRef>
            </descriptorRefs>
          </configuration>
          <executions>
            <execution>
              <id>make-assembly</id> <!-- this is used for inheritance merges -->
              <phase>package</phase> <!-- bind to the packaging phase -->
              <goals>
                <goal>single</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>${maven-enforcer-plugin.version}</version>
          <executions>
            <execution>
              <id>enforce-maven</id>
              <goals>
                <goal>enforce</goal>
              </goals>
              <configuration>
                <rules>
                  <requireMavenVersion>
                    <version>${minimal.maven.version}</version>
                  </requireMavenVersion>
                </rules>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.projectlombok</groupId>
          <artifactId>lombok-maven-plugin</artifactId>
          <version>${lombok-maven-plugin.version}</version>
          <dependencies>
            <dependency>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </dependency>
          </dependencies>
          <executions>
            <execution>
              <id>delombok</id>
              <!-- <phase>generate-sources</phase> -->
              <!--<goals>-->
              <!--  <goal>delombok</goal>-->
              <!--</goals>-->
            </execution>
            <execution>
              <id>test-delombok</id>
              <!-- <phase>generate-test-sources</phase> -->
              <!--<goals>-->
              <!--  <goal>testDelombok</goal>-->
              <!--</goals>-->
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>

      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-enforcer-plugin</artifactId>
      </plugin>

    </plugins>



  </build>


</project>
